bk_ida/gccida/g2/print_operand_address
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand_address/src/i386.c:6591:17: error: expected expression
v2 = *( _OWORD *)&scale.base; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand_address/src/i386.c:6591:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&scale.base; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand_address/src/i386.c:6593:17: error: expected expression
if ( *( _OWORD *)&scale.base == 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand_address/src/i386.c:6593:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&scale.base == 0LL ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand_address/src/i386.c:6642:16: error: use of undeclared identifier 'off_67227A'
fprintf( file, off_67227A, v4); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand_address/src/i386.c:6695:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)scale.disp->fld[0]; 
                      ^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand_address/src/i386.c:6729:16: error: use of undeclared identifier 'off_67227E'
fprintf( file, off_67227E, v4); 
               ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_operand_address/src/obj/i386.o] Error 1
